--- a/confirmation - Chinese Simplified (CN).html
+++ b/confirmation - Chinese Simplified (CN).html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh-Hans" class="no-js">
 <head>
-<title>ProQuest退订</title>
+<title>ProQuest Preference Center Confirmation</title>
 <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com" />
+<meta name="com.silverpop.defaultsource" content="Web">
+<meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
@@ -26,52 +32,28 @@
 <script src="https://www.proquest.com/includes/bootstrap.min.js"></script>
 <script src="https://www.proquest.com/includes/parsley.min.js"></script>
 <script src="https://www.proquest.com/includes/jquery.form.min.js"></script>
+<script>
+function checkform(event) {
+	//Sets the date for the "Last Touch Lead Source Date"
+	var today = new Date();
+	var dd = today.getDate();
+	var mm = today.getMonth()+1; //January is 0!
+	var yyyy = today.getFullYear();
 
-<style type="text/css">
-.header {
-	color: #333333;
-	font-weight: bold;
+	if (dd < 10) { dd = '0'+dd }
+	if (mm < 10) { mm = '0'+mm }
+	today = mm+'/'+dd+'/'+yyyy;
+	document.getElementById("Last Touch Lead Source Date").value = today;
+
+	// If there is a comment included then "Direct Inquiry" if not then "Marketing Accepted Lead"
+	var myForm = document.contact;
+	if (myForm.comment.value == "") {
+		document.getElementById("Lead Status").value = "Marketing Accepted Lead";
+	} else {
+		document.getElementById("Lead Status").value = "Direct Inquiry";
+	}
 }
-#h3header {
-	font-size: 20px;
-	color: #333333;
-	font-weight: bold;
-}
-#formfontcolor {
-	color: #333333;
-!important font-size:15px;
-}
-hr {
-	display: block;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
-	margin-left: auto;
-	margin-right: auto;
-	border-style: inset;
-	border-width: 2px;
-}
-.required {
-  color: #a51f1e;
-}
-.main_footer {
-  float: left;
-  width: 100%;
-  padding: 0;
-}
-.main_footer a {
-  color: white;
-}
-.main_footer .links {
-  padding: 5px 15px;
-}
-.main_footer .links a {
-  font-size: 12px;
-  padding: 5px;
-}
-a:hover, a:focus {
-  text-decoration: none;
-}
-</style>
+</script>
 </head>
 
 <body>
@@ -86,18 +68,18 @@ a:hover, a:focus {
         <nav class="navbar navbar-default">
           <div class="container-fluid"><!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-              <button aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" /> <span class="icon-bar" /> <span class="icon-bar" /> </button>
+              <button aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button"> <span class="sr-only">Toggle navigation</span></button>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a  xtlinkname="TopNav_SupportCenter" xt="SPCLICK" name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="850560">Support Center |</a></li>
-                <li><a  xtlinkname="TopNavNews" xt="SPCLICK" name="TopNavNews" href="https://www.proquest.com/about/news/" xthyperlink="850561">News |</a></li>
-                <li><a  xtlinkname="TopNav_Contact" xt="SPCLICK" name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="850562">Contact</a></li>
+                <li><a  name="TopNav_SupportCenter" xtlinkname="TopNav_SupportCenter" xt="SPCLICKSTREAM" href="https://www.proquest.com/company/support-landing.html" xthyperlink="850600">Support Center |</a></li>
+                <li><a  name="TopNavNews" xtlinkname="TopNavNews" xt="SPCLICKSTREAM" href="https://www.proquest.com/about/news/" xthyperlink="850601">News |</a></li>
+                <li><a  name="TopNav_Contact" xtlinkname="TopNav_Contact" xt="SPCLICKSTREAM" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="850602">Contact</a></li>
               </ul>
-            </div>
-            <!-- /.navbar-collapse --></div>
-          <!-- /.container-fluid --> </nav>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
       </div>
     </div>
   </div>
@@ -106,62 +88,23 @@ a:hover, a:focus {
 <div class="proquest_part">
   <div class="container">
     <div class="col-md-12">
-      <div class="inner_proquest"><img width="169" height="66" class="img-responsive" alt="ProQuest Logo" src="logo_3.jpg" name="logo_3.jpg" title="ProQuest Logo" contentid="21211396" xt="SPIMAGE" spname="logo_5.jpg" /></div>
+      <div class="inner_proquest"><a  xtlinkname="Top_PQ_Logo" xt="SPCLICKSTREAM" name="Top_PQ_Logo" href="https://www.proquest.com" xthyperlink="850603"><img  contentid="21211398" spname="logo_2.jpg" alt="" class="img-responsive" src="logo_2.jpg" /></a></div>
     </div>
   </div>
 </div>
 
-<div class="arts_db_part">
-  <div class="container">
-    <div class="col-md-12">
-      <div class="inner_db">
-        <div class="top_db">
-          <p>ProQuest | Your Subscription Preferences</p>
+<div class="background_part">
+  <div class="container">&nbsp;</div>
+
+  <div class="overview_part">
+    <div class="container">
+      <div class="col-md-12">
+        <div class="left_overview">
+          <h3>非常感谢您输入的信息，您的电子邮件偏好设置已经更新！</h3>
+          <h3>如需了解更多信息，请浏览我们的博客、新闻或LibGuides。</h3>
+          <!--<p>This is where we will put the link to the gated content or a simple thank you for submitting their form information. This area can be as long or as short as we want it to be, fitting to the needs of the confirmation page.</p>-->
+          <p>&nbsp;</p>
         </div>
-        <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px; color: #33333; font-family: 'Open Sans'">退订</span></div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div style="color:" class="background_part">
-  <div class="container-fluid">
-    <div class="col-md-12">
-      <div class="inner_subscription">&nbsp;</div>
-    </div>
-  </div>
-</div>
-
-<div class="small_para_part">
-  <div class="container">
-    <div class="col-md-12">
-      <div class="inner_small">
-        <p><span style="font-size: 16px; color: #333333; 'font-family': 'Open Sans'">非常遗憾您选择停止接收我们的电子邮件！我们能理解每天收到大量邮件给您带来的困扰，您仅希望通过退订邮件，来精简邮件接收的数量。</span></p>
-        <h2>请问您近期查询过电子邮件订阅偏好设置吗？</h2>
-        <p>基于用户设置的电子邮件订阅偏好，我们力求为大家提供优质、相关性强的内容。如果您希望接收更精简、不同类型的信息，我们建议您不用退订，<a href="https://go.proquest.com/preferences-cn" name="update_preferences" target="_blank" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="850563" style="color: #00a0df; text-decoration:none">而是通过重新设置电子邮件的偏好来实现</a> 。</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="first_form_part">
-  <div class="container">
-    <div class="col-md-12">
-      <div class="inner_first_one">
-
-      <form id="unsubscribe" method="post">
-        <ul class="clearfix">
-          <li class="clearfix">
-            <label id="formfontcolor">Email <span class="required">*</span></label>
-            <input type="text" name="email" class="form-control" id="email" data-required="true" data-type="email" />
-          </li>
-          <br />
-          <li class="clearfix">
-            <input type="submit" id="submit" name="submit" value="退订" class="btn btn-primary btn-lg" />
-          </li>
-        </ul>
-      </form>
-
       </div>
     </div>
   </div>
@@ -209,8 +152,48 @@ a:hover, a:focus {
       </div>
     </div>
   </div><!-- /.main_footer -->
-</div><!-- .first_form_part -->
+
+  </div><!-- .container -->
+</div><!-- .background-part-none -->
+
+<style>
+.main_footer {
+  float: left;
+  width: 100%;
+  padding: 0;
+}
+.main_footer a {
+  color: white;
+}
+.main_footer .links {
+  padding: 5px 15px;
+}
+.main_footer .links a {
+  font-size: 12px;
+  padding: 5px;
+}
+a:hover, a:focus {
+  text-decoration: none;
+}
+</style>
+
+<script>
+	// function to clear the form if it's not the person who opened it. Useful for people accessing via a public computer
+	function myFunction() {
+		document.getElementById("contact").reset();
+	}
+</script>
 
 </body>
+
+<!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PKTQGK');
+</script>
+<!-- End Google Tag Manager -->
 
 </html>
