--- a/preferencesGDPR .html
+++ b/preferencesGDPR .html
@@ -38,7 +38,6 @@
     <div class="inner_proquest" style="padding: 0px; margin-top:15px;"><a href="http://alexanderstreet.com" name="Top_PQ_Logo" xtlinkname="Top_PQ_Logo" xt="SPCLICKSTREAM" target="_blank" xthyperlink="914304"><img src="https://alexanderstreet.com/sites/default/files/horizontalLogoASWHite.png" class="img-responsive" alt="ProQuest Logo" name="https://alexanderstreet.com/sites/default/files/horizontalLogoASWHite.png" title="ProQuest Logo" width="169" height="66"  xt="SPIMAGE" contentid="" spname="https://alexanderstreet.com/sites/default/files/horizontalLogoASWHite.png" /></a></div>
   </div>
 </div>
-</div>
 <!--*********************** End Header ***********************--> 
 
 <!--*********************** Start Hero Image ***********************-->
@@ -111,7 +110,7 @@
               </div>
 
               <input type="hidden" name="DoubleOptInDate" id="DoubleOptInDate" value="mm/dd/yyyy">
-              <input type="hidden" name="LastTouchLeadSourceDate" id="LastTouchLeadSourceDate" value="mm/dd/yyyy">              
+              <input type="hidden" name="LastTouchLeadSourceDate" id="LastTouchLeadSourceDate" value="mm/dd/yyyy"> <!-- Remove? -->
 
             </form>
           </div>
@@ -122,53 +121,53 @@
   </div>
   <p>&nbsp;</p>
 
-  <!--*********************** Start Footer Area ***********************--> 
+<!-- ======== START Temporary Footer (to be removed) ======== -->
+
   <div class="footer_one">
     <div class="container">
       <div class="col-md-12">
-        <div class="col-md-2 col-xs-6"> 
-          <!--*********************** Navigation ***********************-->
-          <div class="single_ft" style="line-height: 30px;">
-            <h4>Navigation</h4>
-            <a href="http://www.proquest.com/libraries" name="Footer_Navigation_Libraries" xt="SPCLICKSTREAM" xtlinkname="Footer_Navigation_Libraries" xthyperlink="914308">For Libraries</a><br />
-            <a href="http://www.proquest.com/researchers" name="Footer_Navigation_Researchers" xt="SPCLICKSTREAM" xtlinkname="Footer_Navigation_Researchers" xthyperlink="914309">For Researchers</a><br />
-            <a href="http://www.proquest.com/products-services" name="Footer_Navigation_ProductsServices" xt="SPCLICKSTREAM" xtlinkname="Footer_Navigation_ProductsServices" xthyperlink="914310">Products &amp; Services</a><br />
-            <a href="http://www.proquest.com/customer-care" name="Footer_Navigation_Customers" xt="SPCLICKSTREAM" xtlinkname="Footer_Navigation_Customers" xthyperlink="914311">For Customers</a><br />
-            <a href="http://www.proquest.com/events" name="Footer_Navigation_Events" xt="SPCLICKSTREAM" xtlinkname="Footer_Navigation_Events" xthyperlink="914312">Events</a><br />
-            <a href="http://www.proquest.com/about" name="Footer_Navigation_About" xt="SPCLICKSTREAM" xtlinkname="Footer_Navigation_About" xthyperlink="914313">About</a><br />
-            <a href="http://www.proquest.com/blog" name="Footer_Navigation_Blogs" xt="SPCLICKSTREAM" xtlinkname="Footer_Navigation_Blogs" xthyperlink="914314">Blogs</a></div>
+        <div class="col-md-2 col-xs-6">
+          <div class="single_ft quicklinks">
+            <h4>Navigation</h4><!--Navigation-->
+            <a name="Footer_Navigation_Libraries" href="http://www.proquest.com/libraries">For Libraries</a><br>
+            <a name="Footer_Navigation_Researchers" href="http://www.proquest.com/researchers">For Researchers</a><br>
+            <a name="Footer_Navigation_ProductsServices" href="http://www.proquest.com/products-services">Products &amp; Services</a><br>
+            <a name="Footer_Navigation_Customers" href="http://www.proquest.com/customer-care">For Customers</a><br>
+            <a name="Footer_Navigation_Events" href="http://www.proquest.com/events">Events</a><br>
+            <a name="Footer_Navigation_About" href="http://www.proquest.com/about">About</a><br>
+            <a name="Footer_Navigation_Blogs" href="http://www.proquest.com/blog">Blogs</a>
+          </div>
         </div>
-        <div class="col-md-2 col-xs-6"> 
-          <!--*********************** Support ***********************-->
-          <div class="single_ft" style="line-height: 30px;">
-            <h4>Support</h4>
-            <a href="http://www.proquest.com/company/support-landing.html" name="Footer_Support_SupportCenter" xt="SPCLICKSTREAM" xtlinkname="Footer_Support_SupportCenter" xthyperlink="914315">Support Center</a><br />
-            <a href="http://www.proquest.com/customer-care/tools-resources/" name="Footer_Support_ToolsResources" xt="SPCLICKSTREAM" xtlinkname="Footer_Support_ToolsResources" xthyperlink="914316">Tools and Resources</a><br />
-            <a href="http://www.proquest.com/customer-care/training-webinars/" name="Footer_Support_TrainingWebinars" xt="SPCLICKSTREAM" xtlinkname="Footer_Support_TrainingWebinars" xthyperlink="914317">Training Webinars</a><br />
-            <a href="http://proquest.libguides.com/home" name="Footer_Support_LibGuides" xt="SPCLICKSTREAM" xtlinkname="Footer_Support_LibGuides" xthyperlink="914318">LibGuides</a></div>
+        <div class="col-md-2 col-xs-6">
+          <div class="single_ft quicklinks">
+            <h4>Support</h4><!--Support-->
+            <a name="Footer_Support_SupportCenter" href="http://www.proquest.com/company/support-landing.html">Support Center</a><br>
+            <a name="Footer_Support_ToolsResources" href="http://www.proquest.com/customer-care/tools-resources/">Tools and Resources</a><br>
+            <a name="Footer_Support_TrainingWebinars" href="http://www.proquest.com/customer-care/training-webinars/">Training Webinars</a><br>
+            <a name="Footer_Support_LibGuides" href="http://proquest.libguides.com/home">LibGuides</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!--*********************** End Footer Area ***********************--> 
+  </div><!-- /.footer_one -->
 
-  <!--*********************** Start Last Thing ***********************-->
+  <!-- For the "Cookie Preferences" footer link - served by trustarc.com -->
+  <script src="https://consent.trustarc.com/notice?domain=proquest.com&c=teconsent&js=nj&noticeType=bb&text=true" async="async" crossorigin=""></script>
+
   <div class="main_footer">
-    <div class="container">
-      <div class="col-md-12">
-        <div class="inner_footer" align="center">
-          <p>
-            <a href="http://www.proquest.com/about/privacy-statement.html" name="BottomNav_Privacy" xt="SPCLICKSTREAM" xtlinkname="BottomNav_Privacy" xthyperlink="914319">Privacy</a>&nbsp;&nbsp;
-            <a href="http://www.proquest.com/about/terms-and-conditions.html" name="BottomNav_TermsofUse" xt="SPCLICKSTREAM" xtlinkname="BottomNav_TermsofUse" xthyperlink="914320">Terms of Use</a>&nbsp;&nbsp;
-            <a href="http://www.proquest.com/about/cookie-policy.html" name="BottomNav_Cookies" xt="SPCLICKSTREAM" xtlinkname="BottomNav_Cookies" target="_blank" xturl="" xtwebform="null" xthyperlink="914321">Cookies</a>&nbsp;&nbsp;
-            <a href="http://www.proquest.com/company/ProQuest-ADA-Compliance.html" name="BottomNav_Accessibility" xt="SPCLICKSTREAM" xtlinkname="BottomNav_Accessibility" target="_blank" xturl="" xtwebform="null" xthyperlink="914322">Accessibility</a>&nbsp;&nbsp;
-            <a href="http://media2.proquest.com/documents/dmcapolicy.pdf" name="BottomNav_DMCAPolicy" xt="SPCLICKSTREAM" xtlinkname="BottomNav_DMCAPolicy" target="_blank" xturl="" xtwebform="null" xthyperlink="914323">DMCA Policy</a>&nbsp;&nbsp;
-          </p>
-        </div>
+    <div class="container links col-xs-12">
+      <div style="text-align: center;">
+        <a name="BottomNav_Privacy" href="http://www.proquest.com/about/privacy-statement.html">Privacy</a>
+        <a name="BottomNav_TermsofUse" href="http://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+        <a name="BottomNav_Cookies" href="http://www.proquest.com/about/cookie-policy.html">Cookies</a>
+        <div id="teconsent" style="display: inline;"></div>
+        <a name="BottomNav_Accessibility" href="http://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+        <a name="BottomNav_DMCAPolicy" href="http://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
       </div>
     </div>
-  </div>
-  <!--*********************** End Last Thing ***********************--> 
+  </div><!-- /.main_footer -->
+
+<!-- ======== END Temporary Footer ======== -->
 
 </div>
 </body>
@@ -195,11 +194,23 @@
 .parsley-type {
 	color: white;
 }
-.clear-identity-action a:visited {
-	color: purple;
+.main_footer {
+  float: left;
+  width: 100%;
+  padding: 0;
 }
-a:visited {
-	color: purple;
+.main_footer a {
+  color: white;
+}
+.main_footer .links {
+  padding: 5px 15px;
+}
+.main_footer .links a {
+  font-size: 12px;
+  padding: 5px;
+}
+a:hover, a:focus {
+  text-decoration: none;
 }
 </style>
 <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -212,8 +223,8 @@ a:visited {
 <script>
 var formLanguage = 'en';
 
-// Function to set the date for the "Last Touch Lead Source Date"
-function setLastTouchLeadSourceDate() {
+// Function to get today's date for filling out date fields
+function getTodaysDateString() {
   var today = new Date();
   var dd = today.getDate();
   var mm = today.getMonth()+1; //January is 0!
@@ -222,7 +233,8 @@ function setLastTouchLeadSourceDate() {
   if (dd < 10) { dd = '0'+dd };
   if (mm < 10) { mm = '0'+mm };
   today = mm+'/'+dd+'/'+yyyy;
-  $('#DoubleOptInDate').val(today);  // Sets hidden field for current date
+
+  return today;
 }
 
 // Document Ready
@@ -231,8 +243,10 @@ $( document ).ready(function() {
   // From pq-clear-contact-form.js - disallow changing the email address if already set
   initContactForm('contact', 'Email');  // modify this to pass form, email IDs
 
-  // Do that last-touch-lead-source thing
-  setLastTouchLeadSourceDate();
+  // Set hidden fields to current date
+  var dateString = getTodaysDateString();
+  $('#LastTouchLeadSourceDate').val(dateString);  // Remove?
+  $('#DoubleOptInDate').val(dateString);
 
 });
 </script>
