--- a/unsubscribe - English (EN).html
+++ b/unsubscribe - English (EN).html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <title>ProQuest Unsubscribe</title>
-    <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<head>
+  <title>ProQuest Unsubscribe</title>
+  <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
@@ -18,135 +22,164 @@
   <link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
 
   <!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<style type="text/css">
-.header {
-    color: #333333;
-    font-weight: bold;
-}
-#h3header {
-    font-size: 20px;
-    color: #333333;
-    font-weight: bold;
-}
-#formfontcolor {
-    color: #333333;
-    !important font-size:15px;
-}
-hr {
+
+  <style type="text/css">
+  .header {
+      color: #333333;
+      font-weight: bold;
+  }
+  #h3header {
+      font-size: 20px;
+      color: #333333;
+      font-weight: bold;
+  }
+  hr {
     display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 2px;
-}
-.main_footer {
-    float: left;
-    width: 100%;
-    padding: 0;
-}
-.main_footer a {
-    color: white;
-}
-.main_footer .links {
-    padding: 5px 15px;
-}
-.main_footer .links a {
-    font-size: 12px;
-    padding: 5px;
-}
-a:hover, a:focus {
-    text-decoration: none;
-}</style>
-  </head>
+    margin: 0.5em auto 0.5em auto;
+    border: 2px inset;
+  }
+  .pq-lead-text {
+    font-size: 16px;
+  }
+  .pq-form-label-dark {
+    color: #333333;
+  }
+  .required {
+    color: #a51f1e;
+  }
+  .main_footer {
+      float: left;
+      width: 100%;
+      padding: 0;
+  }
+  .main_footer a {
+      color: white;
+  }
+  .main_footer .links {
+      padding: 5px 15px;
+  }
+  .main_footer .links a {
+      font-size: 12px;
+      padding: 5px;
+  }
+  a:hover, a:focus {
+      text-decoration: none;
+  }
+  </style>
+</head>
 
-  <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+<body>
+<!--[if lt IE 7]>
+  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
 
-    <div class="header-area">
-      <div class="container">
-      <div class="row">
-      <div class="col-md-12"><nav class="navbar navbar-default">
-      <div class="container-fluid"><!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header"><button aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar" /> <span class="icon-bar" /> <span class="icon-bar" /> </button></div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-          <li><a xthyperlink="849388" xtlinkname="TopNav_SupportCenter" xt="SPCLICK" name="TopNav_SupportCenter" href="http://www.proquest.com/company/support-landing.html">Support Center |</a></li>
-          <li><a xthyperlink="849389" xtlinkname="TopNavNews" xt="SPCLICK" name="TopNavNews" href="http://www.proquest.com/about/news/">News |</a></li>
-          <li><a xthyperlink="849390" xtlinkname="TopNav_Contact" xt="SPCLICK" name="TopNav_Contact" href="http://www.proquest.com/contact/contact-landing.html">Contact</a></li>
-      </ul>
-      </div>
-      <!-- /.navbar-collapse --></div>
-      <!-- /.container-fluid --> </nav></div>
-      </div>
+<div class="header-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button aria-expanded="false" data-target="#navbar-collapse-1" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar">&nbsp;</span>
+                <span class="icon-bar">&nbsp;</span>
+                <span class="icon-bar">&nbsp;</span>
+              </button>
+            </div><!-- /.navbar-header -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div id="navbar-collapse-1" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html">Contact</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
       </div>
     </div>
+  </div>
+</div><!-- /.header-area -->
 
-    <div class="proquest_part">
-      <div class="container">
-      <div class="col-md-12">
-      <div class="inner_proquest"><img class="img-responsive" alt="ProQuest Logo" src="logo_3.jpg" name="logo_3.jpg" title="ProQuest Logo" contentid="21197080" xt="SPIMAGE" spname="logo_5.jpg" width="169" height="66" /></div>
-      </div>
+<div class="proquest_part">
+  <div class="container">
+    <div class="col-md-12">
+      <div class="inner_proquest">
+        <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom">
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" />
+        </a>
       </div>
     </div>
+  </div>
+</div><!-- /.proquest_part -->
 
-    <div class="arts_db_part">
-      <div class="container">
-      <div class="col-md-12">
+<div class="arts_db_part">
+  <div class="container">
+    <div class="col-md-12">
       <div class="inner_db">
-      <div class="top_db">
-      <p>ProQuest | Your Subscription Preferences</p>
-      </div>
-      <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px; color: #33333; font-family: 'Open Sans'">Unsubscribe</span></div>
-      </div>
-      </div>
+        <div class="top_db">
+          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Subscription Preferences</p>
+        </div>
+        <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px;">Unsubscribe</span></div>
       </div>
     </div>
+  </div>
+</div><!-- /.arts_db_part -->
 
-    <div class="background_part">
-      <div class="container-fluid">
-      <div class="col-md-12">
+<div class="background_part">
+  <div class="container-fluid">
+    <div class="col-md-12">
       <div class="inner_subscription">&nbsp;</div>
-      </div>
-      </div>
     </div>
+  </div>
+</div><!-- /.background_part -->
 
-    <div class="small_para_part">
-      <div class="container">
-      <div class="col-md-12">
+<!-- ============ START Intro Text ============ -->
+<div class="small_para_part">
+  <div class="container">
+    <div class="col-md-12">
       <div class="inner_small">
-      <p><span style="font-size: 16px; color: #333333; 'font-family': 'Open Sans'">We're sorry to see you go but we understand that you've got plenty of email in your inbox every day, and sometimes you just need to simplify.</span></p>
-      <h2>Have you checked your preferences lately?</h2>
-      <p>We strive to provide our subscribers with quality content that is relevant to them by using individual subscription preferences. If you simply want to receive fewer or different communications, we suggest that you <a href="http://go.proquest.com/preferences" name="update_preferences" target="_blank" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="849391" style="color: #00a0df; text-decoration:none">update your subscription preferences</a> instead of unsubscribing.</p>
-      </div>
-      </div>
+        <p class="pq-lead-text">We're sorry to see you go but we understand that you've got plenty of email in your inbox every day, and sometimes you just need to simplify.</p>
+        <h2>Have you checked your preferences lately?</h2>
+        <p>We strive to provide our subscribers with quality content that is relevant to them by using individual subscription preferences. If you simply want to receive fewer or different communications, we suggest that you <a href="http://go.proquest.com/preferences" name="update_preferences" target="_blank" xt="SPCLICK" xtlinkname="update_preferences" xthyperlink="849391" style="color: #00a0df; text-decoration:none">update your subscription preferences</a> instead of unsubscribing.</p>
       </div>
     </div>
+  </div>
+</div>
+<!-- ============ END Intro Text ============ -->
 
-    <div class="first_form_part">
-      <div class="container">
-      <div class="col-md-12">
+<!-- ============ START Main Form Body ============ -->
+<div class="main_form_part">
+  <div class="container">
+    <div class="col-md-12">
       <div class="inner_first_one">
-      <form id="unsubscribe" method="post">
+
+        <form id="unsubscribe" method="post">
           <ul class="clearfix">
-              <li class="clearfix"><label id="formfontcolor">Email<span class="required">*</span></label>             <input name="email" class="form-control" id="email" data-required="true" data-type="email" type="text" /></li>
-              <br />
-              <li class="clearfix"><input id="submit" name="submit" value="Unsubscribe" class="btn btn-primary btn-lg" type="submit" /></li>
-              <br />
+            <li class="clearfix">
+              <label class="pq-form-label-dark">Email <span class="required">*</span></label>
+              <input type="text" class="form-control" id="email" name="email" data-required="true" data-type="email" />
+            </li>
+            <br>
+            <li class="clearfix">
+              <input type="submit" value="Unsubscribe" class="btn btn-primary btn-lg" id="submit" name="submit" />
+            </li>
+            <br>
 <!--
-              <p>Instead of leaving for good you could just taking a break, click Pause to stop recieving mailing from us for 60 days.</p>
-              <br />
-              <li class="clearfix"><input class="btn btn-primary btn-lg" value="Pause" name="SP_SNOOZE_SUBMIT" type="submit" /></li>
+            <p>Instead of leaving for good you could just taking a break, click Pause to stop recieving mailing from us for 60 days.</p>
+            <br>
+            <li class="clearfix">
+              <input type="submit" value="Pause" class="btn btn-primary btn-lg" name="SP_SNOOZE_SUBMIT" />
+            </li>
 -->
           </ul>
-      </form>
+        </form>
+
       </div>
-      </div>
-      </div>
+    </div>
+  </div>
 
 <!-- ======== START Temporary Footer (to be removed) ======== -->
 
@@ -156,22 +189,22 @@ a:hover, a:focus {
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Navigation</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="920672" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">For Libraries</a><br>
-            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="920673" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">For Researchers</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="920674" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">Products &amp; Services</a><br>
-            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="920675" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">For Customers</a><br>
-            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="920676" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Events</a><br>
-            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="920677" xt="SPCLICK" xtlinkname="Footer_Navigation_About">About</a><br>
-            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="920678" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
+            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">For Libraries</a><br>
+            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">For Researchers</a><br>
+            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Products &amp; Services</a><br>
+            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">For Customers</a><br>
+            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Events</a><br>
+            <a name="Footer_Navigation_About" href="https://www.proquest.com/about">About</a><br>
+            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
           </div>
         </div>
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Support</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="920679" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Support Center</a><br>
-            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="920680" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Tools and Resources</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="920681" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Training Webinars</a><br>
-            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="920682" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
+            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center</a><br>
+            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Tools and Resources</a><br>
+            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Training Webinars</a><br>
+            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
           </div>
         </div>
       </div>
@@ -184,19 +217,20 @@ a:hover, a:focus {
   <div class="main_footer">
     <div class="container links col-xs-12">
       <div style="text-align: center;">
-        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="920683" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>
-        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="920684" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>
-        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="920685" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>
+        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
         <div id="teconsent" style="display: inline;"></div>
-        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="920686" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>
-        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="920687" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
+        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
       </div>
     </div>
   </div><!-- /.main_footer -->
 
 <!-- ======== END Temporary Footer ======== -->
 
-    </div>
+</div>
+<!-- ============ END Main Form Body ============ -->
 
-  </body>
+</body>
 </html>
