--- a/update - English (EN).html
+++ b/update - English (EN).html
@@ -107,9 +107,9 @@ a.clear-identity-action {
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="920610" xt="SPCLICK" xtlinkname="TopNav_SupportCenter">Support Center |</a></li>
-                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/" xthyperlink="920611" xt="SPCLICK" xtlinkname="TopNavNews">News |</a></li>
-                <li><a name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="920612" xt="SPCLICK" xtlinkname="TopNav_Contact">Contact</a></li>
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -123,7 +123,9 @@ a.clear-identity-action {
   <div class="container">
     <div class="col-md-12">
       <div class="inner_proquest">
-        <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom" xthyperlink="920613" xt="SPCLICK" xtlinkname="httpswwwproquestcom"><img src="pq-header-logo_2.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo_2.jpg" xt="SPIMAGE" contentId="22008873" /></a>
+        <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom">
+          <img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" />
+        </a>
       </div>
     </div>
   </div>
@@ -134,7 +136,7 @@ a.clear-identity-action {
     <div class="col-md-12">
       <div class="inner_db">
         <div class="top_db">
-          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom" xthyperlink="920614" xt="SPCLICK" xtlinkname="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
+          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
         </div>
         <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px;">Your Email Preferences</span></div>
       </div>
@@ -157,7 +159,7 @@ a.clear-identity-action {
 <div class="small_para_part">
   <div class="container">
     <div class="col-md-12">
-      <p class="pq-lead-text">Get the ProQuest email that&#8217;s most relevant, informative and useful to you. By choosing your preferences, you consent to receiving emails on these selected types and topics. Come back at any time to update your selections.<br>
+      <p class="pq-lead-text">Get the ProQuest email that’s most relevant, informative and useful to you. By choosing your preferences, you consent to receiving emails on these selected types and topics. Come back at any time to update your selections.<br>
       </p>
     </div>
     <div id="email-warning" class="col-md-6">
@@ -165,7 +167,7 @@ a.clear-identity-action {
       <p>To update your email address, please register again by submitting a <a href="#" class="clear-identity-action" name="new_form" xt="SPNOTRACK">new form</a>.</p>
     </div>
     <div class="col-md-6">
-      <div class="well well-sm">To unsubscribe from all ProQuest mailings, please <a href="https://go.proquest.com/preferences/unsubscribe.html" target="_blank" name="Unsubscribe Redirect" style="color: #00a0df; text-decoration: none;" xthyperlink="920615" xt="SPCLICK" xtlinkname="Unsubscribe Redirect">select here</a>.</div>
+      <div class="well well-sm">To unsubscribe from all ProQuest mailings, please <a href="https://go.proquest.com/preferences/unsubscribe.html" target="_blank" name="Unsubscribe Redirect" style="color: #00a0df; text-decoration: none;">select here</a>.</div>
     </div>
   </div>
 </div>
@@ -740,7 +742,7 @@ a.clear-identity-action {
                   <p>Privacy regulations require that we get your consent to continue to collect, store and use the personal information submitted for account creation or collected while using our services.</p>
                   <div class="form-group">
                     <label class="pq-form-label"><span class="parsley-required">*</span>&nbsp;<input type="checkbox" value="Yes" name="Double OptIn" required="" />
-                    I consent to the collection and use of my personal information consistent with the <a href="https://www.proquest.com/go/privacy" style="color: #00a0df;" xthyperlink="920616" xt="SPCLICK" xtlinkname="httpswwwproquestcomgoprivacy" name="httpswwwproquestcomgoprivacy">Privacy Policy</a>. I&nbsp;acknowledge that use of the service is subject to the <a href="https://proquest.com/go/termsandconditions" style="color: #00a0df;" xthyperlink="920617" xt="SPCLICK" xtlinkname="httpsproquestcomgotermsandconditions" name="httpsproquestcomgotermsandconditions">Terms & Conditions</a>.</label>
+                    I consent to the collection and use of my personal information consistent with the <a href="https://www.proquest.com/go/privacy" style="color: #00a0df;">Privacy Policy</a>. I&nbsp;acknowledge that use of the service is subject to the <a href="https://proquest.com/go/termsandconditions" style="color: #00a0df;">Terms & Conditions</a>.</label>
                   </div>
                 </div>
               </div>
@@ -778,22 +780,22 @@ a.clear-identity-action {
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Navigation</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="920618" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">For Libraries</a><br>
-            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="920619" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">For Researchers</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="920620" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">Products &amp; Services</a><br>
-            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="920621" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">For Customers</a><br>
-            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="920622" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Events</a><br>
-            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="920623" xt="SPCLICK" xtlinkname="Footer_Navigation_About">About</a><br>
-            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="920624" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
+            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">For Libraries</a><br>
+            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">For Researchers</a><br>
+            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Products &amp; Services</a><br>
+            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">For Customers</a><br>
+            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Events</a><br>
+            <a name="Footer_Navigation_About" href="https://www.proquest.com/about">About</a><br>
+            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
           </div>
         </div>
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Support</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="920625" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Support Center</a><br>
-            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="920626" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Tools and Resources</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="920627" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Training Webinars</a><br>
-            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="920628" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
+            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center</a><br>
+            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Tools and Resources</a><br>
+            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Training Webinars</a><br>
+            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
           </div>
         </div>
       </div>
@@ -806,12 +808,12 @@ a.clear-identity-action {
   <div class="main_footer">
     <div class="container links col-xs-12">
       <div style="text-align: center;">
-        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="920629" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>
-        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="920630" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>
-        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="920631" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>
+        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
+        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
+        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
         <div id="teconsent" style="display: inline;"></div>
-        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="920632" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>
-        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="920633" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
+        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
+        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
       </div>
     </div>
   </div><!-- /.main_footer -->
